# tubecaster-telegram-bot

./: .deploy.stamp  .editorconfig  .env  .env.SAMPLE  .env.local.SAMPLE  .env.logging-local.SAMPLE  .env.logging-ngrok.SAMPLE  .env.secure.SAMPLE  .env.server.SAMPLE  .env.vercel.SAMPLE  .gitignore  250901-39-usage-statistics-queries.md  251014-fix-telebot-imports.py  CHANGELOG.41-usage-plans.md  CHANGELOG.md  README.md  README.vercel-deployment.md  README.ytdl.md  index.wsgi  logging-server-syslog.py  logging-server.py  package.json  pnpm-lock.yaml  project-version.txt  pyproject.toml  pysyslog.py  requirements-frozen-241118-01.txt  requirements-frozen-241118-02.txt  requirements-remove-librosa.txt  requirements.README.md  requirements.txt  scripts.py  test  test.stamp  vercel.json  wsgi.py
.scripts/: README.md  prisma-init.sh  pytests.sh
.utils/: clean-all.sh  clean-cache.sh  config-check.sh  config.sh  increment-version.sh  push-with-tags.sh  update-build-time.sh  update-build-variables.sh  venv-init.sh
.venv-scripts/: check-venv.sh  install-requirements.sh  prisma-init.sh  pytests.sh  test-pydantic.py  www-create-venv.sh
api/: __init__.py  index.py
bot/: __init__.py  botApp.handler.md  botApp.py  botBlueprint.py  botCommands.py  botConfig.py  botRoutes.py
bot/cast/: __init__.py  addCookieToOptions.py  cleanFiles.py  downloadAndSendAudioToChat.py  downloadAudioFile.py  downloadInfo.py  getYtdlBaseOptions.py  prepareLinkInfo.py  replyOrSend.py  sendInfoToChat.py
bot/commands/: __init__.py  cast.py  castCommand.py  castCommand.txt  castHelpers.py  castTestCommand.py  commands.py  commandsInfo.py  help.py  helpCommand.py  infoCommand.py  sendInfo.py  start.py  startCommand.py  test.py  testCommand.py
bot/helpers/: __init__.py  replyOrSend.py
bot/modules/: __init__.py  modules.py
botApp/: __init__.py  botApp.py  botStates.py
botCast/: __init__.py
botCast/api/: __init__.py  downloadAndSendAudioToChat.py  sendInfoToChat.py  sendStatsToChat.py
botCast/config/: __init__.py  castConfig.py
botCast/helpers/: __init__.py  _sendAudioPiece.py  _sendAudioToChat.py  addCookieToOptions.py  cleanFiles.py  cleanOutdatedTempFolders.py  downloadAudioFile.py  downloadInfo.py  getYtdlBaseOptions.py  prepareLinkInfo.py
botCommands/: __init__.py  castCommand.py  castHelpers.py.UNUSED  castTestCommand.py  commands.py  commandsInfo.py  helpCommand.py  infoCommand.py  requestFullAccess.py  requestFullAccessPayment.py  sendInfo.py  showRemoveAccountDialog.py  startCommand.py  statsCommand.py  testCommand.py
botCommands/api-info/: castCommand-youtube-dl.md  videoInfo.txt
botCore/: botConfig.py
botCore/constants/: __init__.py  _emojies.py  _stickers.py  emojies.py  limits.py  stickers.py
botCore/helpers/: __init__.py  _addNewValidUser.py  _checkValidUser.py  _createAcceptNewUserButtonsMarkup.py  _createCommonButtonsMarkup.py  _createRemoveAccountButtonsMarkup.py  _createSendRegistrationReguestButtonsMarkup.py  _createVideoCaptionStr.py  _editOrSendMessage.py  _getDesiredPiecesCount.py  _getFormattedVideoFileSize.py  _getLanguageCode.py  _getUserId.py  _getUserName.py  _getVideoDetailsStr.py  _getVideoTags.py  _getVideoTags_test.py  _prepareYoutubeDate.py  _replyOrSend.py  _sendNewUserRequestMessage.py  _sendNewUserRequestToController.py  _showNewUserMessage.py  _showNewUserMessage.py.UNUSED
botCore/routines/: __init__.py  _splitAudio.py
botCore/types/: _TUserMode.py  _TVideoInfo.py  _YtdlOptionsType.py  __init__.py
botRoutes/: __init__.py  _allRoutes.py  _rootRoute.py  _startRoute.py  _stopRoute.py  _testRoute.py  _webhookRoute.py  botRoutes.py
core/: appConfig.py  constants.py  flaskApp.py  logger.py
core/ffmpeg/: __init__.py  _helpers.py  _probe.py  _probeDuration.py  _probeDuration_test.py  _split.py
core/helpers/: __init__.py  files.py  network.py  runtime.py  strings.py  time.py  urls.py  utils.py
core/logger/: CustomHttpHandler.py  DebugLog.py  NoColorFormatter.py  __init__.py  logger.py  loggerConfig.py  utils.py
core/static/: project-info.txt
core/utils/: __init__.py  debugObj.py  generic.py  sanityJson.py  stripHtml.py  variableAndKeyString.py
db/: __init__.py  _addActiveUser.py  _addCommand.py  _addCommand_test.py  _addTempMessage.py  _addTempMessage_test.py  _checkCommandExistsForMessageId.py  _checkCommandExistsForMessageId_test.py  _collectStats.py  _collectStats_test.py  _deleteCommandById.py  _deleteCommandById_test.py  _deleteOutdatedCommands.py  _deleteOutdatedCommands_test.py  _deleteOutdatedTempMessages.py  _deleteOutdatedTempMessages_test.py  _findUser.py  _getTempMessagesForCommand.py  _init.py  _stats_test.py  _types.py  _updateStats.py  _updateStats_test.py  dbConfig.py  init.py  prisma_test.py  types.py
db/stats/: __init__.py  _collectStats.py  _collectStats_test.py  _getMonthlyStats.py  (+5 more)
flaskApp/: __init__.py  flaskApp.py
poetry-scripts/: __init__.py  export_requirements.py  prisma.py  pylint.py
prisma/: schema.prisma
publicSite/: __init__.py  publicSiteBlueprint.py  publicSiteDebugBlueprint.py
static/: project-info.txt  site.webmanifest
tests/: .gitignore  downloadAndSendAudioToChat.test.py  downloadAudio.test.py  sendAudio.py  sendAudioToChat.test.py  sendInfoToChat.test.py  sendLocalAudioToChat.test.py  sendMessage.test.py  sendMessageToLoggingChannel.py  sendMessageToLoggingChannel.py.UNUSED.EXAMPLE  splitViaFfmpeg.test.py  test-pydantic.py  testPydantic.py  testSplit-02.py  testVideoInfo.py  testYoutubeDl.md  testYoutubeDl.py  youtubeDl-select.test.py  youtubeDl.test.py  yt-dlp-listformats-format-item-example.json  yt-dlp-listformats.py
(+58 files in other folders)
